[gd_scene load_steps=9 format=3 uid="uid://g4qhvbvdm62w"]

[ext_resource type="Script" path="res://scenes/game_settings_scene.gd" id="1_3764u"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="1_w6tmj"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/game_settings.tscn" id="2_qsqie"]
[ext_resource type="Theme" uid="uid://d22mpqutkotsu" path="res://ui/theme.tres" id="3_unbh4"]
[ext_resource type="FontFile" uid="uid://b7bje77ycxb31" path="res://fonts/CP Font.otf" id="4_cm4rd"]
[ext_resource type="AudioStream" uid="uid://bw2ifd7rtbklw" path="res://music/00_iwashiro_sarusaru_music.mp3" id="6_he7r3"]
[ext_resource type="AudioStream" uid="uid://cwi2buwbpupeg" path="res://music/カコ.mp3" id="7_ar70w"]
[ext_resource type="AudioStream" uid="uid://bebry024vhmtp" path="res://music/カポ.mp3" id="8_ce0a1"]

[node name="GameSettingsScene" type="Node2D"]
script = ExtResource("1_3764u")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "サウンド設定"

[node name="GameSettings" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("2_qsqie")]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_unbh4")
theme_override_fonts/font = ExtResource("4_cm4rd")
text = "戻る"

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_w6tmj")]
unique_name_in_owner = true
visible = false

[node name="audioBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_he7r3")
volume_db = -5.0
autoplay = true
bus = &"Music"

[node name="audio_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ar70w")
bus = &"Sound"

[node name="audio_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ce0a1")
bus = &"Sound"
